force-app/main/default/objects/RMS__c/RMS__c.object-meta.xml
<CustomObject>
    <label>RMS</label>
    <nameField>
        <label>RMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>