force-app/main/default/objects/RMS__c/fields/Agent_Profit_Share__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profit_Share__c</fullName>
    <label>Agent Profit Share</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>