force-app/main/default/objects/RMS__c/fields/Airport_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport of Destination</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>RMS (Airport of Destination)</relationshipLabel>
    <relationshipName>RMS1</relationshipName>
    <type>Lookup</type>
</CustomField>