force-app/main/default/objects/RMS__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Rate Filing</relationshipLabel>
    <relationshipName>RMS</relationshipName>
    <type>Lookup</type>
</CustomField>