force-app/main/default/objects/RMS__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment Type</label>
    <referenceTo>Equipment_Type__c</referenceTo>
    <relationshipLabel>RMS</relationshipLabel>
    <relationshipName>RMS</relationshipName>
    <type>Lookup</type>
</CustomField>