force-app/main/default/objects/RMS__c/fields/Ex_Works_All_In__c.field-meta.xml
<CustomField>
    <fullName>Ex_Works_All_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ex-Works All-In</label>
    <type>Checkbox</type>
</CustomField>