force-app/main/default/objects/RMS__c/fields/FOB_All_In__c.field-meta.xml
<CustomField>
    <fullName>FOB_All_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOB All-In</label>
    <type>Checkbox</type>
</CustomField>