force-app/main/default/objects/RMS__c/fields/Free_time_POD__c.field-meta.xml
<CustomField>
    <fullName>Free_time_POD__c</fullName>
    <label>Free time POD</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>