force-app/main/default/objects/RMS__c/fields/Port_Of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_Of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>RMS (Port Of Discharge)</relationshipLabel>
    <relationshipName>RMS1</relationshipName>
    <type>Lookup</type>
</CustomField>