force-app/main/default/objects/RMS__c/fields/Port_Of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_Of_Loading__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Port Of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>RMS</relationshipLabel>
    <relationshipName>RMS</relationshipName>
    <type>Lookup</type>
</CustomField>