force-app/main/default/objects/RMS__c/fields/Rate_Kg__c.field-meta.xml
<CustomField>
    <fullName>Rate_Kg__c</fullName>
    <label>Rate/Kg</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>