force-app/main/default/objects/RMS__c/fields/Shipping_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Line</label>
    <referenceTo>Shipping_Line__c</referenceTo>
    <relationshipLabel>RMS</relationshipLabel>
    <relationshipName>RMS</relationshipName>
    <type>Lookup</type>
</CustomField>