force-app/main/default/objects/RMS__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity</label>
    <type>Date</type>
</CustomField>