force-app/main/default/objects/RMS__c/fields/X10000__c.field-meta.xml
<CustomField>
    <fullName>X10000__c</fullName>
    <label>+10000</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>