force-app/main/default/objects/RMS__c/fields/X1000__c.field-meta.xml
<CustomField>
    <fullName>X1000__c</fullName>
    <label>+1000</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>