force-app/main/default/objects/RMS__c/fields/X100__c.field-meta.xml
<CustomField>
    <fullName>X100__c</fullName>
    <label>+100</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>