force-app/main/default/objects/RMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Business_Type__c</columns>
    <columns>NAME</columns>
    <columns>Commodity__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Shipping_Line__c</columns>
    <columns>Sea_Freight__c</columns>
    <columns>Validity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>