force-app/main/default/objects/RMS__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Shipping_Line__c</columns>
    <columns>Port_Of_Loading__c</columns>
    <columns>Port_Of_Discharge__c</columns>
    <columns>Sea_Freight__c</columns>
    <columns>Validity__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>